feat: Add sprint1 advanced features